specs/021-spread-rest-defaults/examples/invalid/default-type-mismatch.ts
function f(x: int = "no"): int {
  return x;
}
console.log(f());
